objects/ASI_CN_NPL_Item_Master__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CN_NPL_1st_PO_Quantity_Actual_Case__c</fullName>
        <label>1st PO Quantity (Actual Case)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_391_BJ__c</fullName>
        <defaultValue>true</defaultValue>
        <label>391 (BJ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_391_SH__c</fullName>
        <defaultValue>true</defaultValue>
        <label>391 (SH)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_391_SZ__c</fullName>
        <defaultValue>true</defaultValue>
        <label>391 (SZ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_398_BJ__c</fullName>
        <defaultValue>true</defaultValue>
        <label>398 (BJ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_398_SH__c</fullName>
        <defaultValue>true</defaultValue>
        <label>398 (SH)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_398_SZ__c</fullName>
        <defaultValue>true</defaultValue>
        <label>398 (SZ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_398_YC__c</fullName>
        <defaultValue>true</defaultValue>
        <label>398 (YC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_9L_to_CA__c</fullName>
        <label>9L to CA</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Accounting_Type__c</fullName>
        <label>Accounting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Active_Inactive__c</fullName>
        <label>Active/Inactive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_BT_to_CL__c</fullName>
        <label>BT to CL</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Bottle_Barcode__c</fullName>
        <label>Bottle Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Box_Barcode__c</fullName>
        <label>Box Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Brand_Grade_Seq_Number__c</fullName>
        <label>Brand Grade/Seq Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_CA_to_BT__c</fullName>
        <label>CA to BT</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Cap_Group__c</fullName>
        <label>Cap Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Case_Barcode__c</fullName>
        <label>Case Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Category__c</fullName>
        <label>Category</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Comments__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Destination__c</fullName>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_ETA__c</fullName>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_FASTAR_for_CCC_RP6__c</fullName>
        <label>FASTAR for CCC (RP6)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Hpyerion_Product_RP11__c</fullName>
        <label>Hpyerion Product (RP11)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Hyperion_Brand_RP12__c</fullName>
        <label>Hyperion Brand (RP12)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Description_CH__c</fullName>
        <label>Item Description (CH)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Description_GE__c</fullName>
        <label>Item Description (GE)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Goup_Code__c</fullName>
        <label>Item Goup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Group_Description_CH__c</fullName>
        <label>Item Group Description (CH)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Group_Description_GE__c</fullName>
        <label>Item Group Description (GE)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Group_Fastar_Size__c</fullName>
        <label>Item Group (Fastar + Size)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Master_Type__c</fullName>
        <label>Item Master Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NPL</fullName>
                </value>
                <value>
                    <fullName>NPL Batch</fullName>
                </value>
                <value>
                    <fullName>Vintage Wine</fullName>
                </value>
                <value>
                    <fullName>Repack</fullName>
                </value>
                <value>
                    <fullName>RP Code</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Number__c</fullName>
        <label>New Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_LT_to_BT__c</fullName>
        <label>LT to BT</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Local_SKU_13_Code__c</fullName>
        <label>Local SKU/13 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Local_Sub_Cat_13_Code__c</fullName>
        <label>Local Sub-Cat/13 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Main_Category__c</fullName>
        <label>Main Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_NPL_Reference_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPL Reference Number</label>
        <referenceTo>ASI_CN_NPL_NPL_Request__c</referenceTo>
        <relationshipLabel>Item Masters</relationshipLabel>
        <relationshipName>Item_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_New_Brand_Sub_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Brand/Sub Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_New_Item_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Item Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Packing_BT_per_case__c</fullName>
        <label>Packing - BT per Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Packing_CL_per_bottle__c</fullName>
        <label>Packing - CL per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Preferred_Carrier_Purchase__c</fullName>
        <label>Preferred Carrier for Purchasing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Preferred_Carrier_for_Custome__c</fullName>
        <label>Preferred Carrier for Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Product_Grouping_RP10__c</fullName>
        <label>Product Grouping (RP10)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Product_Grouping_S_Memo_RP10__c</fullName>
        <label>Product Grouping (S. Memo)(RP10)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_RP9__c</fullName>
        <label>RP9</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Seagram_Non_Seagram__c</fullName>
        <label>Seagram/ Non Seagram</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting For Logistics Input Item Code</fullName>
                    <default>true</default>
                    <label>Waiting For Logistics Input Item Code</label>
                </value>
                <value>
                    <fullName>Waiting For BA Input Category Code</fullName>
                </value>
                <value>
                    <fullName>Waiting For Logistics Finalize Chinese Name</fullName>
                </value>
                <value>
                    <fullName>Waiting For Sales Planning Input Item Group Description (GE &amp; CH)</fullName>
                </value>
                <value>
                    <fullName>Waiting For Logistics Final Confirmation</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Sub_Brand_Fastar_RP6__c</fullName>
        <label>Sub Brand/Fastar (RP6)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Sub_Brand_RP6__c</fullName>
        <label>Sub Brand (RP6)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Sub_Category__c</fullName>
        <label>Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Unit_Size_Description__c</fullName>
        <label>Unit Size Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_VAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Warehouse_Process_Grp_3__c</fullName>
        <label>Warehouse Process Grp 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Item Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_CN_NPL_Status__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CN_NPL_Item_Description_CH__c</columns>
        <columns>ASI_CN_NPL_Item_Description_GE__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_CN_NPL_NPL_Reference_No__c</columns>
        <columns>ASI_CN_NPL_Item_Goup_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>IM-{YY}-{00000}</displayFormat>
        <label>Item Master Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Masters</pluralLabel>
    <recordTypes>
        <fullName>ASI_CN_NPL_Item_Master_TypeA</fullName>
        <active>true</active>
        <label>Type A</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CN_NPL_Item_Master_TypeB</fullName>
        <active>true</active>
        <label>Type B</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>